--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,22 @@
 </head>
 <body>
     <h1 th:text="'List of Owners'"/>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner.id}">1</td>
+            <td th:text="${owner.firstName}">Oleg</td>
+            <td th:text="${owner.lastName}">Vinnyk</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
