--- a/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
@@ -41,7 +41,7 @@
 <table class="table table-striped">
 
   <tr th:each="pet : ${owner.pets}">
-    <td valign="top">
+    <td style="vertical-align: top">
       <dl class="dl-horizontal">
         <dt>Name</dt>
         <dd th:text="${pet.name}" /></dd>
@@ -49,10 +49,10 @@
         <dd
                 th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}" /></dd>
         <dt>Type</dt>
-        <dd th:text="${pet.type}" /></dd>
+        <dd th:text="${pet.petType.name}" /></dd>
       </dl>
     </td>
-    <td valign="top">
+    <td style="vertical-align: top">
       <table class="table-condensed">
         <thead>
         <tr>
